--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ main{
     grid-area: main;
     border: 1px solid black;
     background-color: #8a8a8a;
+    overflow: auto;
 }
 footer{
     grid-area: footer;
