--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ footer{
 
 #conteneur{
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: minmax(75px, 15%) 85%;
     grid-template-rows: 10% 80% 10%;
     height: 100%;
     width: 100%;
